argocd/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bibbunited
  namespace: civpulse-dev
spec:
  selector:
    app: bibbunited
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
